--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Joy Seno</title>
+      <title>vamshi</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -17,6 +17,20 @@
       <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
       <!-- style css -->
       <link rel="stylesheet" type="text/css" href="css/style.css">
+
+
+
+
+
+
+
+
+
+
+
+
+
+      +++++
       <!-- Responsive-->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
@@ -80,7 +94,7 @@
                               <div class="row">
                                  <div class="col-md-6">
                                     <div class="banner_taital_main">
-                                       <h3 class="banner_text">Hello Am <br>Joy Seno</h3>
+                                       <h3 class="banner_text">Hello I Am <br>vamshi</h3>
                                        <h1 class="banner_taital">UI/UX Designer</h1>
                                     </div>
                                  </div>
@@ -102,7 +116,7 @@
                               <div class="row">
                                  <div class="col-md-6">
                                     <div class="banner_taital_main">
-                                       <h3 class="banner_text">Hello Am <br>Joy Seno</h3>
+                                       <h3 class="banner_text">Hello Am <br>vamshi</h3>
                                        <h1 class="banner_taital">UI/UX Designer</h1>
                                     </div>
                                  </div>
@@ -124,7 +138,7 @@
                               <div class="row">
                                  <div class="col-md-6">
                                     <div class="banner_taital_main">
-                                       <h3 class="banner_text">Hello Am <br>Joy Seno</h3>
+                                       <h3 class="banner_text">Hello Am <br>vamshi</h3>
                                        <h1 class="banner_taital">UI/UX Designer</h1>
                                     </div>
                                  </div>
