--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                  <div class="col-md-6">
                                     <div class="banner_taital_main">
                                        <h3 class="banner_text">Hello I Am <br>vamshi</h3>
-                                       <h1 class="banner_taital">UI/UX Designer</h1>
+                                       <h1 class="banner_taital">Artificial Inteligence AI</h1>
                                     </div>
                                  </div>
                                  <div class="col-md-6">
@@ -117,7 +117,7 @@
                                  <div class="col-md-6">
                                     <div class="banner_taital_main">
                                        <h3 class="banner_text">Hello Am <br>vamshi</h3>
-                                       <h1 class="banner_taital">UI/UX Designer</h1>
+                                       <h1 class="banner_taital">Machine Learning</h1>
                                     </div>
                                  </div>
                                  <div class="col-md-6">
@@ -139,7 +139,7 @@
                                  <div class="col-md-6">
                                     <div class="banner_taital_main">
                                        <h3 class="banner_text">Hello Am <br>vamshi</h3>
-                                       <h1 class="banner_taital">UI/UX Designer</h1>
+                                       <h1 class="banner_taital">Data scienctist</h1>
                                     </div>
                                  </div>
                                  <div class="col-md-6">
