--- a/contact.html
+++ b/contact.html
@@ -92,13 +92,13 @@
       <!-- footer section start -->
       <div class="footer_section">
          <div class="container">
-            <div class="location_text">
+            <div class="Uppal Road, Ramanthapur, Rahat Nagar, Amberpet, Hyderabad, Telangana 500013_text">
                <ul>
                   <li>
                      <a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a>
                   </li>
                   <li>
-                     <a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                     <a href="#"><i class="9573602818" aria-hidden="true"></i></a>
                   </li>
                   <li>
                      <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
